# ROS2_3arm_GripperControl

./: README.md
ROS2_3arm_GripperControl/: Dockerfile
ROS2_3arm_GripperControl/ros2_ws/: gripper.sh
ROS2_3arm_GripperControl/ros2_ws/src/install/wsg50_driver_pkg/lib/: gripper_node  wsg50-driver-pkg.egg-link
ROS2_3arm_GripperControl/ros2_ws/src/wsg50_driver_pkg/: .coverage  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ROS2_3arm_GripperControl/ros2_ws/src/wsg50_driver_pkg/config/: gripper_params.yaml
ROS2_3arm_GripperControl/ros2_ws/src/wsg50_driver_pkg/launch/: gripper.launch.py
ROS2_3arm_GripperControl/ros2_ws/src/wsg50_driver_pkg/srv/: Calibrate.srv  GetStatus.srv  SetWidth.srv
ROS2_3arm_GripperControl/ros2_ws/src/wsg50_driver_pkg/test/: test_gripper_node.py
ROS2_3arm_GripperControl/ros2_ws/src/wsg50_driver_pkg/wsg50_driver/: __init__.py  gripper_control.py  gripper_node.py  utils.py  wsg_interface.py
